--- a/backend/pong/Dockerfile
+++ b/backend/pong/Dockerfile
@@ -19,9 +19,13 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the rest of the application code
 COPY . /app/
 
+COPY entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
 
 # Expose port
 EXPOSE 8000
+
+ENTRYPOINT [ "/app/entrypoint.sh" ]
 
 # Run the dev server
 CMD ["sh", "-c", "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
