--- a/frontend/nginx_dev.conf
+++ b/frontend/nginx_dev.conf
@@ -32,7 +32,7 @@ http {
 
 		# proxy requests to auth API
 		location /auth/ {
-			proxy_pass http://172.24.0.1:8000/;
+			proxy_pass http://172.26.0.1:8000/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -42,7 +42,7 @@ http {
 
 		# proxy request for register API
 		location /register/ {
-			proxy_pass http://172.24.0.1:8001/;
+			proxy_pass http://172.26.0.1:8001/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -53,7 +53,7 @@ http {
 
 		# proxy requests to game API
 		location /pong/ {
-			proxy_pass http://172.24.0.1:8002;
+			proxy_pass http://172.26.0.1:8002;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -62,7 +62,7 @@ http {
 		}
 
 		location /lobby/ {
-			proxy_pass http://172.24.0.1:8004;
+			proxy_pass http://172.26.0.1:8004;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -72,20 +72,25 @@ http {
 
 
 location /ws/chat {
-    proxy_pass http://172.24.0.1:8003; # Your WebSocket server
+    set $auth_token $arg_token;
+	proxy_pass http://172.26.0.1:8003; # Your WebSocket server
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
+    proxy_set_header Authorization "Bearer $auth_token";
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	
 }
 
 location /ws/tournament {
-    proxy_pass http://172.24.0.1:8004; # Your WebSocket server
+	set $auth_token $arg_token;
+    proxy_pass http://172.26.0.1:8004; # Your WebSocket server
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
+	proxy_set_header Authorization "Bearer $auth_token";
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -99,7 +104,6 @@ location /ws/tournament {
 	server {
 		listen			80;
 		server_name		localhost;
-		
 		return 301		https://$host$request_uri;
 	}
 }
@@ -125,7 +129,7 @@ location /ws/tournament {
 
 #         # Proxy requests to API 1
 #         location /api1/ {
-#             proxy_pass https://172.24.0.1:9443/;  # API 1 (register) running on port 9443
+#             proxy_pass https://172.26.0.1:9443/;  # API 1 (register) running on port 9443
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -134,7 +138,7 @@ location /ws/tournament {
 
 #         # Proxy requests to API 2
 #         location /api2/ {
-#             proxy_pass https://172.24.0.1:8443/;  # API 2 running on port 8443 (auth)
+#             proxy_pass https://172.26.0.1:8443/;  # API 2 running on port 8443 (auth)
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -143,7 +147,7 @@ location /ws/tournament {
 
 # 		# Proxy requests to API 2
 #         location /api3/ {
-#             proxy_pass https://172.24.0.1:8000/;  # API 2 running on port 8443 (auth)
+#             proxy_pass https://172.26.0.1:8000/;  # API 2 running on port 8443 (auth)
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
