--- a/frontend/nginx_dev.conf
+++ b/frontend/nginx_dev.conf
@@ -32,7 +32,16 @@ http {
 
 		# proxy requests to auth API
 		location /auth/ {
-			proxy_pass http://172.26.0.1:8000/;
+			proxy_pass http://172.28.0.1:8000/;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+			proxy_set_header X-Method-Allowed "POST, GET, OPTIONS";
+		}
+
+		location /users/ {
+			proxy_pass http://172.28.0.1:8001/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -42,7 +51,7 @@ http {
 
 		# proxy request for register API
 		location /register/ {
-			proxy_pass http://172.26.0.1:8001/;
+			proxy_pass http://172.28.0.1:8001/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -50,10 +59,9 @@ http {
 			proxy_set_header X-Method-Allowed "POST, GET, OPTIONS";
 		}
 
-
 		# proxy requests to game API
 		location /pong/ {
-			proxy_pass http://172.26.0.1:8002;
+			proxy_pass http://172.28.0.1:8002;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -62,7 +70,7 @@ http {
 		}
 
 		location /lobby/ {
-			proxy_pass http://172.26.0.1:8004;
+			proxy_pass http://172.28.0.1:8004;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -73,7 +81,7 @@ http {
 
 location /ws/chat {
     set $auth_token $arg_token;
-	proxy_pass http://172.26.0.1:8003; # Your WebSocket server
+	proxy_pass http://172.28.0.1:8003; # Your WebSocket server
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
@@ -86,7 +94,7 @@ location /ws/chat {
 
 location /ws/tournament {
 	set $auth_token $arg_token;
-    proxy_pass http://172.26.0.1:8004; # Your WebSocket server
+    proxy_pass http://172.28.0.1:8004; # Your WebSocket server
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
@@ -129,7 +137,7 @@ location /ws/tournament {
 
 #         # Proxy requests to API 1
 #         location /api1/ {
-#             proxy_pass https://172.26.0.1:9443/;  # API 1 (register) running on port 9443
+#             proxy_pass https://172.28.0.1:9443/;  # API 1 (register) running on port 9443
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -138,7 +146,7 @@ location /ws/tournament {
 
 #         # Proxy requests to API 2
 #         location /api2/ {
-#             proxy_pass https://172.26.0.1:8443/;  # API 2 running on port 8443 (auth)
+#             proxy_pass https://172.28.0.1:8443/;  # API 2 running on port 8443 (auth)
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -147,7 +155,7 @@ location /ws/tournament {
 
 # 		# Proxy requests to API 2
 #         location /api3/ {
-#             proxy_pass https://172.26.0.1:8000/;  # API 2 running on port 8443 (auth)
+#             proxy_pass https://172.28.0.1:8000/;  # API 2 running on port 8443 (auth)
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
