--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -273,8 +273,8 @@ services:
         condition: service_healthy
       user-service:
         condition: service_healthy
-      chat-service:
-        condition: service_healthy
+     # chat-service:
+     #   condition: service_healthy
       pong-game:
         condition: service_healthy
       lobby:
