--- a/backend/chat-service/requirements.txt
+++ b/backend/chat-service/requirements.txt
@@ -6,7 +6,7 @@ psycopg2-binary==2.9.10
 sqlparse==0.5.1
 uvicorn[standard]
 django-extensions==3.2.3
-Werkzeug==2.3.7
+Werkzeug>=3.0.6
 PyJWT==2.8.0
 pytest==7.4.0
 pytest-django==4.5.2
