--- a/backend/lobby/requirements.txt
+++ b/backend/lobby/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.8.1
 Django==5.1.2
-djangorestframework==3.15.2
+djangorestframework>=3.15.2
 psycopg2-binary==2.9.10
 sqlparse==0.5.1
 uvicorn[standard]
@@ -8,6 +8,6 @@ daphne[standard]
 channels
 channels_redis
 django-extensions==3.2.3
-Werkzeug==2.3.7
+Werkzeug>=3.0.6
 pyOpenSSL==23.2.0
 requests
