--- a/backend/user-management/match-history-service/requirements.txt
+++ b/backend/user-management/match-history-service/requirements.txt
@@ -1,5 +1,5 @@
 psycopg2-binary==2.9.6
-djangorestframework==3.14.0
+djangorestframework>=3.15.2
 django-filter==23.2
 djangorestframework-simplejwt==5.2.2
 celery==5.3.4
