--- a/frontend/nginx_dev.conf
+++ b/frontend/nginx_dev.conf
@@ -23,7 +23,7 @@ http {
 
 		# Serve Ember app from the local development server
     	location / {
-        	proxy_pass http://172.17.0.1:4200;
+        	proxy_pass http://host.docker.internal:4200;
         	proxy_set_header Host $host;
         	proxy_set_header X-Real-IP $remote_addr;
         	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -32,7 +32,7 @@ http {
 
 		# proxy requests to auth API
 		location /auth/ {
-			proxy_pass http://172.20.0.1:8000/;
+			proxy_pass http://host.docker.internal:8000/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -41,7 +41,7 @@ http {
 		}
 
 		location /users/ {
-			proxy_pass http://172.20.0.1:8001/;
+			proxy_pass http://host.docker.internal:8001/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -51,7 +51,7 @@ http {
 
 		# proxy request for register API
 		location /register/ {
-			proxy_pass http://172.20.0.1:8001/;
+			proxy_pass http://host.docker.internal:8001/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -61,7 +61,7 @@ http {
 
 		# proxy requests to game API
 		location /pong/ {
-			proxy_pass http://172.20.0.1:8002;
+			proxy_pass http://host.docker.internal:8002;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -70,7 +70,7 @@ http {
 		}
 
 		location /lobby/ {
-			proxy_pass http://172.20.0.1:8004;
+			proxy_pass http://host.docker.internal:8004;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -81,7 +81,7 @@ http {
 
 location /ws/chat {
     set $auth_token $arg_token;
-	proxy_pass http://172.20.0.1:8003; # Your WebSocket server
+	proxy_pass http://host.docker.internal:8003; # Your WebSocket server
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
@@ -94,7 +94,7 @@ location /ws/chat {
 
 location /ws/tournament {
 	set $auth_token $arg_token;
-    proxy_pass http://172.20.0.1:8004; # Your WebSocket server
+    proxy_pass http://host.docker.internal:8004; # Your WebSocket server
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
@@ -137,7 +137,7 @@ location /ws/tournament {
 
 #         # Proxy requests to API 1
 #         location /api1/ {
-#             proxy_pass https://172.20.0.1:9443/;  # API 1 (register) running on port 9443
+#             proxy_pass https://host.docker.internal:9443/;  # API 1 (register) running on port 9443
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -146,7 +146,7 @@ location /ws/tournament {
 
 #         # Proxy requests to API 2
 #         location /api2/ {
-#             proxy_pass https://172.20.0.1:8443/;  # API 2 running on port 8443 (auth)
+#             proxy_pass https://host.docker.internal:8443/;  # API 2 running on port 8443 (auth)
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -155,7 +155,7 @@ location /ws/tournament {
 
 # 		# Proxy requests to API 2
 #         location /api3/ {
-#             proxy_pass https://172.20.0.1:8000/;  # API 2 running on port 8443 (auth)
+#             proxy_pass https://host.docker.internal:8000/;  # API 2 running on port 8443 (auth)
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
