--- a/backend/lobby/requirements.txt
+++ b/backend/lobby/requirements.txt
@@ -1,4 +1,4 @@
-asgiref==3.8.1
+asgiref
 Django==5.1.2
 djangorestframework>=3.15.2
 psycopg2-binary==2.9.10
@@ -11,3 +11,4 @@ django-extensions==3.2.3
 Werkzeug>=3.0.6
 pyOpenSSL==23.2.0
 requests
+aiohttp
