--- a/backend/chat-service/requirements.txt
+++ b/backend/chat-service/requirements.txt
@@ -1,4 +1,4 @@
-Django==5.1.2
+Django>=5.1.4
 channels==4.0.0
 asgiref==3.8.1
 channels_redis==4.0.0
@@ -15,7 +15,7 @@ coverage>=7.5
 pytest-cov==6.0.0
 djangorestframework==3.15.2
 daphne==4.0.0
-djangorestframework-simplejwt==5.2.2
+djangorestframework-simplejwt==5.3.1
 requests>=2.26.0
 redis==5.0.0
 
