--- a/backend/pong/requirements.txt
+++ b/backend/pong/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
 Django>=5.1.4
+uvicorn
 djangorestframework>=3.15.2
 psycopg2-binary==2.9.10
 sqlparse==0.5.1
@@ -10,3 +11,5 @@ django-extensions==3.2.3
 Werkzeug>=3.0.6
 pyOpenSSL==23.2.0
 django-cors-headers
+django-redis
+django-celery-beat
