--- a/backend/pong/requirements.txt
+++ b/backend/pong/requirements.txt
@@ -5,6 +5,7 @@ djangorestframework>=3.15.2
 psycopg2-binary==2.9.10
 sqlparse==0.5.1
 uvicorn[standard]
+gunicorn
 channels
 channels_redis
 django-extensions==3.2.3
