--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -101,6 +101,18 @@ http {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		}
+
+		location /ws/pong-game {
+			set $auth_token $arg_token;
+			proxy_pass http://host.docker.internal:8002; # Your WebSocket server
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "Upgrade";
+			proxy_set_header Authorization "Bearer $auth_token";
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		}
 		# disable SSL verification for testing
 		proxy_ssl_verify off;
 	}
