--- a/backend/pong/requirements.txt
+++ b/backend/pong/requirements.txt
@@ -4,8 +4,6 @@ uvicorn
 djangorestframework>=3.15.2
 psycopg2-binary==2.9.10
 sqlparse==0.5.1
-uvicorn[standard]
-gunicorn
 channels
 channels_redis
 django-extensions==3.2.3
@@ -14,3 +12,4 @@ pyOpenSSL==23.2.0
 django-cors-headers
 django-redis
 django-celery-beat
+redis-lock
