--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -30,7 +30,7 @@ http {
 		# proxy requests to auth API
 		# proxy requests to auth API
 		location /auth/ {
-			proxy_pass http://host.docker.internal:8000/;
+			proxy_pass http://172.18.0.1:8000/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -39,7 +39,7 @@ http {
 		}
 
 		location /users/ {
-			proxy_pass http://host.docker.internal:8001/;
+			proxy_pass http://172.18.0.1:8001/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -49,7 +49,7 @@ http {
 
 		# proxy request for register API
 		location /register/ {
-			proxy_pass http://host.docker.internal:8001/;
+			proxy_pass http://172.18.0.1:8001/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -59,7 +59,7 @@ http {
 
 		# proxy requests to game API
 		location /pong/ {
-			proxy_pass http://host.docker.internal:8002;
+			proxy_pass http://172.18.0.1:8002;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -68,7 +68,7 @@ http {
 		}
 
 		location /lobby/ {
-			proxy_pass http://host.docker.internal:8004;
+			proxy_pass http://172.18.0.1:8004;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -79,7 +79,7 @@ http {
 
 		location /ws/chat {
 			set $auth_token $arg_token;
-			proxy_pass http://host.docker.internal:8003; # Your WebSocket server
+			proxy_pass http://172.18.0.1:8003; # Your WebSocket server
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "Upgrade";
@@ -92,7 +92,7 @@ http {
 
 		location /ws/tournament {
 			set $auth_token $arg_token;
-			proxy_pass http://host.docker.internal:8004; # Your WebSocket server
+			proxy_pass http://172.18.0.1:8004; # Your WebSocket server
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "Upgrade";
@@ -104,7 +104,7 @@ http {
 
 		location /ws/pong-game {
 			set $auth_token $arg_token;
-			proxy_pass http://host.docker.internal:8002; # Your WebSocket server
+			proxy_pass http://172.18.0.1:8002; # Your WebSocket server
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "Upgrade";
