--- a/frontend/nginx_dev.conf
+++ b/frontend/nginx_dev.conf
@@ -106,7 +106,7 @@ location /ws/tournament {
 
 location /ws/pong-game {
 			set $auth_token $arg_token;
-			proxy_pass http://host.docker.internal:8002; # Your WebSocket server
+			proxy_pass http://172.18.0.1:8002; # Your WebSocket server
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "Upgrade";
@@ -115,7 +115,7 @@ location /ws/pong-game {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		}
-		
+
 		# disable SSL verification for testing
 		proxy_ssl_verify off;
 	}
