--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -45,6 +45,7 @@ http {
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
 			proxy_set_header X-Method-Allowed "POST, GET, OPTIONS, PUT";
+			client_max_body_size 5M;
 		}
 
 		# proxy request for register API
