--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -120,9 +120,6 @@ services:
       DJANGO_SETTINGS_MODULE: config.settings
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       DJANGO_DEBUG: ${DJANGO_DEBUG}
-      CHAT_SERVICE_DB: ${CHAT_SERVICE_DB}
-      CHAT_SERVICE_USER: ${CHAT_SERVICE_USER}
-      CHAT_SERVICE_PASSWORD: ${CHAT_SERVICE_PASSWORD}
       DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME}
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
       DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
@@ -171,13 +168,12 @@ services:
 
   pong-game:
     build: ./../backend/pong
+    volumes:
+      - ./../backend/pong:/app
     container_name: pong
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       DJANGO_DEBUG: ${DJANGO_DEBUG}
-      PONG_SERVICE_DB: ${PONG_SERVICE_DB}
-      PONG_SERVICE_USER: ${PONG_SERVICE_USER}
-      PONG_SERVICE_PASSWORD: ${PONG_SERVICE_PASSWORD}
       DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME}
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
       DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
@@ -203,9 +199,6 @@ services:
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       DJANGO_DEBUG: ${DJANGO_DEBUG}
-      LOBBY_SERVICE_DB: ${LOBBY_SERVICE_DB}
-      LOBBY_SERVICE_USER: ${LOBBY_SERVICE_USER}
-      LOBBY_SERVICE_PASSWORD: ${LOBBY_SERVICE_PASSWORD}
       DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME}
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
       DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
