--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -195,6 +195,8 @@ services:
 
   lobby:
     build: ./../backend/lobby
+    volumes:
+      - ./../backend/lobby:/app
     container_name: lobby
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
