Update to login functionlaity and a new endpoint/endpoints regarding 2FA

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -76,6 +76,8 @@ services:
       REDIS_HOST: "redis"
       REDIS_PORT: 6379
       REDIS_DB: 0
+      GMAIL_USER: ${GMAIL_USER}
+      GMAIL_APP_PASSWORD: ${GMAIL_APP_PASSWORD}
     networks:
       my_network:
     healthcheck:
