paused bug fixed

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -175,6 +175,8 @@ services:
 
   pong-game:
     build: ./../backend/pong
+    volumes:
+      - ./../backend/pong:/app
     container_name: pong
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
@@ -200,6 +202,8 @@ services:
 
   lobby:
     build: ./../backend/lobby
+    volumes:
+      - ./../backend/lobby:/app
     container_name: lobby
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
