--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -27,6 +27,12 @@ http {
 			try_files	$uri $uri/ /index.html;
 		}
 
+		# serve media files from shared volume
+		location /media/ {
+			alias /usr/share/nginx/media/;
+			autoindex on;
+		}
+
 		# proxy requests to auth API
 		# proxy requests to auth API
 		location /auth/ {
