--- a/frontend/nginx_dev.conf
+++ b/frontend/nginx_dev.conf
@@ -23,16 +23,22 @@ http {
 
 		# Serve Ember app from the local development server
     	location / {
-        	proxy_pass http://host.docker.internal:4200;
+        	proxy_pass http://172.17.0.1:4200;
         	proxy_set_header Host $host;
         	proxy_set_header X-Real-IP $remote_addr;
         	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         	proxy_set_header X-Forwarded-Proto $scheme;
     	}
 
+		# serve media files from shared volume
+		location /media/ {
+			alias /usr/share/nginx/media/;
+			autoindex on;
+		}
+
 		# proxy requests to auth API
 		location /auth/ {
-			proxy_pass http://host.docker.internal:8000/;
+			proxy_pass http://172.21.0.1:8000/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -41,7 +47,7 @@ http {
 		}
 
 		location /users/ {
-			proxy_pass http://host.docker.internal:8001/;
+			proxy_pass http://172.21.0.1:8001/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -51,7 +57,7 @@ http {
 
 		# proxy request for register API
 		location /register/ {
-			proxy_pass http://host.docker.internal:8001/;
+			proxy_pass http://172.21.0.1:8001/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -61,7 +67,7 @@ http {
 
 		# proxy requests to game API
 		location /pong/ {
-			proxy_pass http://host.docker.internal:8002;
+			proxy_pass http://172.21.0.1:8002;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -70,7 +76,7 @@ http {
 		}
 
 		location /lobby/ {
-			proxy_pass http://host.docker.internal:8004;
+			proxy_pass http://172.21.0.1:8004;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -81,7 +87,7 @@ http {
 
 location /ws/chat {
     set $auth_token $arg_token;
-	proxy_pass http://host.docker.internal:8003; # Your WebSocket server
+	proxy_pass http://172.21.0.1:8003; # Your WebSocket server
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
@@ -94,7 +100,7 @@ location /ws/chat {
 
 location /ws/tournament {
 	set $auth_token $arg_token;
-    proxy_pass http://host.docker.internal:8004; # Your WebSocket server
+    proxy_pass http://172.21.0.1:8004; # Your WebSocket server
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
@@ -106,7 +112,7 @@ location /ws/tournament {
 
 location /ws/pong-game {
 			set $auth_token $arg_token;
-			proxy_pass http://host.docker.internal:8002; # Your WebSocket server
+			proxy_pass http://172.21.0.1:8002; # Your WebSocket server
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "Upgrade";
